--- a/site/style.css
+++ b/site/style.css
@@ -1,6 +1,7 @@
 body {
 
     background-color: rgb(216, 212, 212);
+    background-image: url('back.svg');
   
 }
 .logo {
@@ -11,7 +12,53 @@ body {
     top: 0px;
 }
 .fotnav {
-    position: absolute;
-    bottom: 0px;
-    right: 0px;
+    position: relative;
+    
+}
+.main {
+    
+}
+.Über {
+
+}
+
+.htext{
+   
+    background-color: white;
+    width: 900px;
+    height: 2000px;
+    margin: 0 auto;
+}
+#Artikel{
+    position: relative;
+    background-color: beige;
+    left: 100px;
+    top: 40px;
+    width: 700px;
+    height: 500px;
+}
+#Artikel2{
+    position: relative;
+    background-color: beige;
+    left: 100px;
+    top: 80px;
+    width: 700px;
+    height: 500px;
+}
+#Artikel3{
+    position: relative;
+    background-color: beige;
+    left: 100px;
+    top: 120px;
+    width: 700px;
+    height: 500px;
+}
+.arthead{
+    position: relative;
+}
+#arthead2{
+    top: 30px;
+}
+#arthead3{
+    top: 70px;
 }
