--- a/site/style.css
+++ b/site/style.css
@@ -10,16 +10,21 @@ body {
 .topnav {
     position: absolute;
     top: 0px;
+    font-size: 30px;
 }
 .fotnav {
     position: relative;
+    font-size: x-large;
     
 }
-.main {
-    
-}
-.Über {
-
+.login {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    height: 60px;
+    width: 200px;
+    font-size: large;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .htext{
@@ -29,9 +34,15 @@ body {
     height: 2000px;
     margin: 0 auto;
 }
+.artikel{
+    text-align: center;
+    border: 1px;
+    border-color: black;
+    border-style: solid;
+    
+}
 #Artikel{
     position: relative;
-    background-color: beige;
     left: 100px;
     top: 40px;
     width: 700px;
@@ -39,7 +50,6 @@ body {
 }
 #Artikel2{
     position: relative;
-    background-color: beige;
     left: 100px;
     top: 80px;
     width: 700px;
@@ -47,7 +57,6 @@ body {
 }
 #Artikel3{
     position: relative;
-    background-color: beige;
     left: 100px;
     top: 120px;
     width: 700px;
@@ -55,10 +64,14 @@ body {
 }
 .arthead{
     position: relative;
+    
 }
-#arthead2{
+#arthead1{
     top: 30px;
 }
+#arthead2{
+    top: 60px;
+}
 #arthead3{
-    top: 70px;
+    top: 100px;
 }
