--- a/site/stylean.css
+++ b/site/stylean.css
@@ -23,10 +23,11 @@ body {
 .anmeldung {
 
 
+
 }
 .center {
     align-self: center;
-    width: 400px;
+    width: 40px;
     top: 100px;
     font-size: 30px;
     margin: 0 auto;
@@ -36,3 +37,6 @@ body {
     height: 40px;
     font-size: 30px;
 }
+select {
+    width: 120px;
+    height: 30px;
