--- a/siteXHTML/styleimp.css
+++ b/siteXHTML/styleimp.css
@@ -21,23 +21,10 @@ body {
     
 }
 
-.center {
-    align-self: center;
-    width: 440px;
-    font-size: 30px;
+.sec{
+    
+}
+.impdiv{
     margin: 0 auto;
-    
-    
-    
-}
-.reg{
-    width: 440px;
-    height: 40px;
-    font-size: 30px;
-    
-}
-select {
-    width: 120px;
-    height: 30px;
- 
+    width: 800px;
 }
