--- a/siteXHTML/stylean.css
+++ b/siteXHTML/stylean.css
@@ -20,24 +20,27 @@ body {
 
     
 }
+.anmeldung {
+   
+    width: 40px;
+    top: 100px;
+    font-size: 30px;
+    
+
+}
 
 .center {
-    align-self: center;
-    width: 440px;
-    font-size: 30px;
-    margin: 0 auto;
-    
-    
+    display: flex;
+    justify-content: center;
+    width: 100%;
     
 }
 .reg{
-    width: 440px;
+    width: 340px;
     height: 40px;
     font-size: 30px;
-    
 }
 select {
     width: 120px;
     height: 30px;
- 
 }
