--- a/site/style.css
+++ b/site/style.css
@@ -6,17 +6,59 @@ body {
 }
 .logo {
     align-self: center;
+    margin-left: 15px;
+    width: 30vmin;
 }
-.topnav {
-    position: absolute;
+
+.nav{
+    
+    left: 1px;
+    
     top: 0px;
-    font-size: 22px;
+    width: 25vmin;
+    height: 4vmin;
+    position: absolute;
+    
+
+}
+
+.NavText {
+    top: 3px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 2.5vmin;
+    text-decoration: none;
+    color: black;
+    position: absolute;
+}
+.NavText:hover{
+    
+    font-weight: bolder;
+}
+#HaText {
+    
+}
+#AkText {
+    left: 13vmin;
 }
 .fotnav {
-    position: relative;
+    bottom: 0px;
     font-size: x-large;
     
 }
+.fotText{
+    top: 3px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 2.5vmin;
+    text-decoration: none;
+    color: black;
+    text-decoration: none;
+    color: black;
+}
+.fotText:hover{
+    
+    font-weight: bolder;
+}
+
 .login {
     position: absolute;
     top: 0px;
@@ -25,6 +67,10 @@ body {
     width: 200px;
     font-size: large;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.login:hover {
+    background-color: rgb(180, 180, 180);
+    
 }
 
 .htext{
