--- a/site/styleimp.css
+++ b/site/styleimp.css
@@ -1,5 +1,4 @@
 body {
- 
 
     background-color: rgb(216, 212, 212);
     background-image: url('back.svg');
@@ -7,19 +6,60 @@ body {
 }
 .logo {
     align-self: center;
+    margin-left: 15px;
+    width: 30vmin;
 }
-.topnav {
-    position: absolute;
+
+.nav{
+    
+    left: 1px;
+    
     top: 0px;
-    font-size: 22px;
+    width: 25vmin;
+    height: 4vmin;
+    position: absolute;
+    
+
+}
+
+.NavText {
+    top: 3px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 2.5vmin;
+    text-decoration: none;
+    color: black;
+    position: absolute;
+}
+.NavText:hover{
+    
+    font-weight: bolder;
+}
+#HaText {
+    
+}
+#AkText {
+    left: 13vmin;
 }
 .fotnav {
     position: absolute;
     bottom: 0px;
     font-size: x-large;
-
     
 }
+.fotText{
+    top: 3px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 2.5vmin;
+    text-decoration: none;
+    color: black;
+    text-decoration: none;
+    color: black;
+}
+.fotText:hover{
+    
+    font-weight: bolder;
+}
+
 
 .sec{
     
