--- a/site/style.css
+++ b/site/style.css
@@ -1,63 +1,3 @@
-body {
-
-    background-color: rgb(216, 212, 212);
-    background-image: url('back.svg');
-  
-}
-.logo {
-    align-self: center;
-    margin-left: 15px;
-    width: 30vmin;
-}
-
-.nav{
-    
-    left: 1px;
-    
-    top: 0px;
-    width: 25vmin;
-    height: 4vmin;
-    position: absolute;
-    
-
-}
-
-.NavText {
-    top: 3px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 2.5vmin;
-    text-decoration: none;
-    color: black;
-    position: absolute;
-}
-.NavText:hover{
-    
-    font-weight: bolder;
-}
-#HaText {
-    
-}
-#AkText {
-    left: 13vmin;
-}
-.fotnav {
-    bottom: 0px;
-    font-size: x-large;
-    
-}
-.fotText{
-    top: 3px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 2.5vmin;
-    text-decoration: none;
-    color: black;
-    text-decoration: none;
-    color: black;
-}
-.fotText:hover{
-    
-    font-weight: bolder;
-}
 
 .login {
     position: absolute;
@@ -72,6 +12,10 @@ body {
     background-color: rgb(180, 180, 180);
     
 }
+.fotnav{
+    position: static;
+}
+
 
 .htext{
    
