--- a/site/stylekon.css
+++ b/site/stylekon.css
@@ -4,77 +4,40 @@ body {
     background-image: url('back.svg');
   
 }
-.logo {
-    align-self: center;
-    margin-left: 15px;
-    width: 30vmin;
-}
-
-.nav{
-    
-    left: 1px;
-    
-    top: 0px;
-    width: 25vmin;
-    height: 4vmin;
+.fotnav{
     position: absolute;
-    
-
-}
-
-.NavText {
-    top: 3px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 2.5vmin;
-    text-decoration: none;
-    color: black;
-    position: absolute;
-}
-.NavText:hover{
-    
-    font-weight: bolder;
-}
-#HaText {
-    
-}
-#AkText {
-    left: 13vmin;
-}
-.fotnav {
-    position: absolute;
-    bottom: 0px;
-    font-size: x-large;
-    
-}
-.fotText{
-    top: 3px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 2.5vmin;
-    text-decoration: none;
-    color: black;
-    text-decoration: none;
-    color: black;
-}
-.fotText:hover{
-    
-    font-weight: bolder;
 }
 
 .header {
-    font-size: 60px;
+    font-size: 7vmin;
 }
 .text {
-    font-size: 30px;
+    font-size: 3vmin;
+    width: 100%;
+    height: 40vmin;
 }
 .form {
-    
+    position: relative;
     align-self: center;
-    width: 400px;
-    font-size: 30px;
+    width: 3vmin;
+    font-size: 3vmin;
     margin: 0 auto;
 }
+
+.input{
+    width: 20vmin;
+    
+}
+.inputO{
+    width: 10vmin;
+}
+.textA{
+    width: 33vmin;
+    height: 17vmin;
+}
+
 .sub {
-    width: 320px;
-    height: 40px;
-    font-size: 20px;
+    width: 34vmin;
+    height: 4vmin;
+    font-size: 2vmin;
 }
