--- a/site/style.css
+++ b/site/style.css
@@ -45,7 +45,13 @@
     
 }
 .header{
-  
     height: 1%;
     text-align: center;
+}
+.text{
+    color: black;
+    text-decoration: none;
+}
+.artikel:hover{
+   background-color: rgba(0, 0, 0, 0.233);
 }
