--- a/site/style.css
+++ b/site/style.css
@@ -29,11 +29,14 @@
 .wrapper{
     background-color: white;
     display: flex;
-    width: 50%;
-    
+    width: 40%;
+    margin-bottom: 1.5rem;
     
 
     
+}
+.über{
+    font-size: 2rem;
 }
 .artikel{
     
@@ -45,13 +48,40 @@
     
 }
 .header{
-    height: 1%;
+    font-size: 1.5rem;
     text-align: center;
+    
+}
+.artikel{
+    font-family: var(--font-family);
+    padding: 30px;
+    margin: 15px;
 }
 .text{
     color: black;
     text-decoration: none;
+    font-family: var(--font-family);
 }
 .artikel:hover{
    background-color: rgba(0, 0, 0, 0.233);
+}
+@media screen and (max-height: 800px)  {
+    .text{
+        font-size: 15px;
+    }
+
+}
+      .header{
+        font-size: 24px;
+    }
+
+@media screen and (max-width: 800px)  {
+    .text{
+        font-size: 15px;
+    }
+
+
+      .header{
+        font-size: 24px;
+    }
 }
