--- a/site/tests/testfooter.css
+++ b/site/tests/testfooter.css
@@ -1,69 +1,24 @@
-:root {
-    --color-primary: #3a00ff;
-    --color-primary-alt: #6f6ffd;
-    --color-secondary: #d42257;
-    --color-background: #d2fbf7;
-    --color-text: #412d86;
-    --color-light: #fff;
-    --color-anchor: #3a00ff;
-    --font-family: "Baloo 2", sans-serif;
-  }
-  * {
+* {
     box-sizing: border-box;
     font-family: ’Lato’, sans-serif;
     margin: 0; 
     padding: 0;
     font-size: 1.9vmin;
 }
-body {
 
-    background-color: white;
+.impdiv{
+    margin: 0 auto;
+    width: 45vmin;
 
-  
+    text-align: center;
+    font-size: 1rem;
+    margin-bottom: 7.4rem;
 }
-.logo {
-    align-self: center;
-    margin-left: 15px;
-    width: 30vmin;
+.h1{
+    font-size: 2.3rem;
+    margin-bottom: 1.7rem;
 }
-
-.nav{
-    
-    left: 1px;
-    
-    top: 0px;
-    width: 25vmin;
-    height: 4vmin;
-    position: absolute;
-    
-
-}
-
-.NavText {
-    top: 3px;
-    font-family: var(--font-family);
-    font-size: 2.5vmin;
-    text-decoration: none;
-    color: black;
-    position: absolute;
-}
-.NavText:hover{
-    
-    font-weight: bolder;
-}
-#HaText {
-    
-}
-#AkText {
-    left: 13vmin;
-}
-.NavText:hover{
-    
-    font-weight: bolder;
-}
-
-
-footer ul {
+ul {
     list-style: none;
     padding-left: 0;
 }
@@ -76,12 +31,11 @@ footer a {
     text-decoration: none;
     color: #eee;
 }
-footer a:hover {
+a:hover {
     text-decoration: underline;
 }
 .ft{
     justify-self: end;
-    
 }
 .ft-title {
     color: #fff;
@@ -118,16 +72,16 @@ body {
         justify-content: space-evenly;
     }
 }
-footer form {
+form {
     display: flex;
     flex-wrap: wrap;
 }
-footer input[type="email"] {
+input[type="email"] {
     border: 0;
     padding: 0.62rem;
     margin-top: 0.31rem;
 }
-footer input[type="submit"] {
+input[type="submit"] {
     background-color: #1166e6;
     color: #fff;
     cursor: pointer;
@@ -161,7 +115,7 @@ footer input[type="submit"] {
     margin: 0.12rem 0.62rem;
     white-space: nowrap;
 }
-
+/* one before the last child */
 .ft-legal-list li:nth-last-child(2) {
-    flex: 1;     
+    flex: 1;       /* same as flex-grow: 1; */
 }
