--- a/site/style.css
+++ b/site/style.css
@@ -3,10 +3,15 @@
     position: absolute;
     top: 0px;
     right: 0px;
-    height: 5.5%;
-    width: 11%;
+    height: 8vh;
+    width: 12vw;
     font-size: 2vmin;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color:  rgb(202, 202, 202);
+    border: 2px;
+    padding: 2px;
+    border-color: rgb(156, 156, 156);
+    border-style: solid;
 }
 .login:hover {
     background-color: rgb(180, 180, 180);
