--- a/site/styleArt1.css
+++ b/site/styleArt1.css
@@ -4,9 +4,7 @@ body {
 
     
 }
-.fotnav{
-    position: static;
-}
+
 .wrapper{
     
     width: 100%;
@@ -17,13 +15,14 @@ body {
 .wrapper-box{
     background-color: var(--color-light);
     width: 50%;
+    min-width: 500px;
     
 }
 h1{
-    font-size: 2rem;
+    font-size: 5vmin;
 }
 .head2{
-    font-size: 1.4rem;
+    font-size: 4vmin;
 }
 .container-ueber{
     display: grid;
@@ -44,7 +43,9 @@ h1{
     width: 40vw;
     height: 50vh;
 }
-
+.unter-video{
+    margin-top: 30px;
+}
 .text{
     font-size: 2vmin;
     text-align: justify;
@@ -100,11 +101,11 @@ h1{
       
         font-size: 30px;
         
-     }
-     .stand-text{
+    }
+    .stand-text{
         font-size: 12px;
       }
-      .artikel-header{
+    .artikel-header{
         font-size: 24px;
     }
 }
@@ -116,11 +117,11 @@ h1{
         
         font-size: 30px;
         
-     }
-     .stand-text{
+    }
+    .stand-text{
         font-size: 12px;
-      }
-      .artikel-header{
+    }
+    .artikel-header{
         font-size: 24px;
     }
 }
