--- a/testschule/remstyle.css
+++ b/testschule/remstyle.css
@@ -1,22 +1,22 @@
-html {
+* {
 
-  
-  }
-   #top-div {
-    padding: 1rem;
-    font-size: 2rem;
-    border: 1px solid red;
+}
+.top-div {
+  max-width: 60%;
+  padding: 1rem;
+  font-size: 2rem;
+  border: 1px solid red;
 
-    background-color: rgba(255, 40, 40, 0.5);
-  } 
-  .div {
-    background-color: rgba(93, 247, 4, 0.5);
-    padding: 2em;
-    font-size: 3em;
-    border: 1px solid black;
-  }
-  .in-div{
-    font-size: 2rem;
-    background-color: rgba(0, 0, 255, 0.452);
-  }
+  background-color: rgba(255, 40, 40, 0.5);
+} 
+.div {
+  background-color: rgba(93, 247, 4, 0.5);
+  padding: 1em;
+  font-size: 2em;
+  border: 1px solid black;
+}
+.in-div{
+  font-size: 2rem;
+  background-color: rgba(0, 0, 255, 0.452);
+}
   
