--- a/testschule/fluidstyle.css
+++ b/testschule/fluidstyle.css
@@ -4,8 +4,8 @@ body{
     padding: 0;
 }
 .content{
+    position: relative;
     font-size: 2rem;
     width: 50%;
-
     background-color:rgb(0, 255, 21);
 }
