--- a/testschule/feststyle.css
+++ b/testschule/feststyle.css
@@ -1,16 +1,35 @@
 body{
+    
     margin: 0; 
     padding: 0;
 
 }
-.hintergrund{
-width: 1800px;
-height: 990px;
-background-color: blue;
-font-size: 30px;
+.klasse1{
+    width: 1200px;
+    height: 900px;
+    background-color: red;
 }
-.content{
-    width: 800px;
-    height: 620px;
-    background-color: rgb(0, 255, 21);
+.klasse2{
+    width: 900px;
+    height: 700px;
+    background-color: green;
+}
+.klasse3{
+    width: 700px;
+    height: 600px;
+}
+.klasse4{
+    width: 600px;
+    height: 500px;
+}
+.klasse5{
+    width: 400px;
+    height: 400px;
+}
+.klasse3 .klasse5{
+    background-color: blue;
+}
+.klasse4 .klasse5{
+    margin-left: 1300px;
+    background-color: pink;
 }
