--- a/schule23/newNav/nav.css
+++ b/schule23/newNav/nav.css
@@ -35,3 +35,28 @@ nav li:nth-last-child(2){
     margin-right: 15px;
     margin-left: 10px;
 } 
+@media screen and (max-width: 600px) {
+    
+    .left-float{
+        display: block;
+        float: none;
+    }
+    .right-float{
+        display: block;
+        float: none;
+    }
+    li{
+        display: block;
+    }
+    nav li:nth-last-child(2){
+        margin-left: -30px;
+    } 
+    nav li{
+        margin-left: -30px;
+    }
+    nav{
+        width: 30%;
+    }
+    
+
+}
