--- a/product-preview-card-component-main/productsytle.css
+++ b/product-preview-card-component-main/productsytle.css
@@ -1,88 +1,97 @@
-body{
-    --Dark-cyan: hsl(158, 36%, 37%);
-    --Cream: hsl(30, 38%, 92%);
-    --Very-dark-blue: hsl(212, 21%, 14%);
-    --Dark-grayish-blue: hsl(228, 12%, 48%);
-    --White: white;
-    margin: 0;
-    padding: 0;
-    background: var(--Cream);
-    font-size: 15px;
+body {
+  --Dark-cyan: hsl(158, 36%, 37%);
+  --Cream: hsl(30, 38%, 92%);
+  --Very-dark-blue: hsl(212, 21%, 14%);
+  --Dark-grayish-blue: hsl(228, 12%, 48%);
+  --White: white;
+  margin: 0;
+  padding: 0;
+  background: var(--Cream);
+  font-size: 15px;
 
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  overflow: hidden;
 }
-.wrapper{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    min-height: 100vh;
-    justify-content: center;
-    align-items: center;
-}
-.container{
-    background-color: var(--White);
-    max-width: 500px;
-    display: flex;
-    flex-direction: row;
-    border-radius: 15px;
-    height: fit-content;
-}
-.img img{
-    border-bottom-left-radius:  15px;
-    border-top-left-radius:  15px;
-    height: 400px;
-}
-.text{
-    padding: 25px;
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
 }
-.ueber{
-    margin-top: -20px;
-    font-family: 'Fraunces', serif;
-    font-size: 20px;
-}
-.wText{
-    color: var(--Dark-grayish-blue);
-}
-.preis{
-    margin-top: 20px;
-    font-family: 'Fraunces', serif;
-    display: flex;
 
+.container {
+  background-color: var(--White);
+  max-width: 500px;
+  display: flex;
+  flex-direction: row;
+  border-radius: 15px;
+  height: fit-content;
 }
-.neu{
-    font-family: 'Fraunces', serif;
-    color: var(--Dark-cyan);
-    font-size: 25px;
-    font-weight: bolder;
+
+.img img {
+  border-bottom-left-radius: 15px;
+  border-top-left-radius: 15px;
+  height: 400px;
 }
-.alt{
-    color: var(--Dark-grayish-blue);
-    line-height: 30px;
-    padding-left: 9px;
-    text-decoration: line-through;
+
+.text {
+  padding: 25px;
 }
-.add{
-    margin-top: 30px;
-    font-size: 14px;
-    color: white;
-    font-family: 'Montserrat', sans-serif;
-    border-radius: 7px;
-    display: flex;
-    padding: 10px;
-    background-color: var(--Dark-cyan);
+
+.ueber {
+  margin-top: -20px;
+  font-family: "Fraunces", serif;
+  font-size: 20px;
 }
-.add:hover{
-    background-color: hsl(158, 30%, 25%);
-    cursor: pointer;
+
+.wText {
+  color: var(--Dark-grayish-blue);
 }
-span{
-    margin-left: 15px;
-    height: 20px;
-    line-height: 20px;
-    width: 20px;
-    
+
+.preis {
+  margin-top: 20px;
+  font-family: "Fraunces", serif;
+  display: flex;
+}
+
+.neu {
+  font-family: "Fraunces", serif;
+  color: var(--Dark-cyan);
+  font-size: 25px;
+  font-weight: bolder;
+}
+
+.alt {
+  color: var(--Dark-grayish-blue);
+  line-height: 30px;
+  padding-left: 9px;
+  text-decoration: line-through;
+}
+
+.add {
+  margin-top: 30px;
+  font-size: 14px;
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  border-radius: 7px;
+  display: flex;
+  padding: 10px;
+  background-color: var(--Dark-cyan);
+}
+
+.add:hover {
+  background-color: hsl(158, 30%, 25%);
+  cursor: pointer;
+}
+
+span {
+  margin-left: 15px;
+  height: 20px;
+  line-height: 20px;
+  width: 20px;
 }
