--- a/uebungen.23/google/google.css
+++ b/uebungen.23/google/google.css
@@ -1,191 +1,176 @@
-body{
-    margin: 0;
-    padding: 0;
-    background: #202124;
-    font-size: 14px;
-    font-family: arial,sans-serif;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    overflow: hidden;
-
+body {
+  margin: 0;
+  padding: 0;
+  background: #202124;
+  font-size: 14px;
+  font-family: arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  overflow: hidden;
 }
 
-.wrapper{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
+.wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
-.container{
-    width: 70%;
-    justify-content: center;
-    display: flex;
-    align-content: center;
-    align-items: center;
-    flex-direction: column;
+.container {
+  width: 70%;
+  justify-content: center;
+  display: flex;
+  align-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-.pic-con{
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    align-content: center;
+.pic-con {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  align-content: center;
 }
-.pic-con img{
-    margin-top: 170px;
+.pic-con img {
+  margin-top: 170px;
 }
-.li-text{
-    margin-top: 8px;
+.li-text {
+  margin-top: 8px;
 }
-.pb-span{
-    margin-bottom: 10px;
+.pb-span {
+  margin-bottom: 10px;
 }
-.pb{
-    line-height: normal;
-    border-radius: 50%;
-    height: 32px;
-    width: 32px;
-    border-radius: 50%;
-    display: block;
-    background-size: 32px 32px;
-    border: 0;
-    position: relative;
-    display: inline;
-
+.pb {
+  line-height: normal;
+  border-radius: 50%;
+  height: 32px;
+  width: 32px;
+  border-radius: 50%;
+  display: block;
+  background-size: 32px 32px;
+  border: 0;
+  position: relative;
+  display: inline;
 }
-.search{
-    width: 100%;
-
+.search {
+  width: 100%;
 }
-.bar-container{
-    margin: 0 auto;
-    padding-top: 0px;
-    width: 100%;
-    max-width: 590px;
-}   
-.bar{
-    display: flex;
-    border-style: solid;
-    align-items: center;
-    margin-top: 30px;
-    border-radius: 24px;
-    border: 1px solid #5f6368;
-    box-shadow: none;
-    height: 45px;
-    width: auto;
-    max-width: 584px;
-
+.bar-container {
+  margin: 0 auto;
+  padding-top: 0px;
+  width: 100%;
+  max-width: 590px;
 }
-.bar:hover{
-    background-color: #303134;
+.bar {
+  display: flex;
+  border-style: solid;
+  align-items: center;
+  margin-top: 30px;
+  border-radius: 24px;
+  border: 1px solid #5f6368;
+  box-shadow: none;
+  height: 45px;
+  width: auto;
+  max-width: 584px;
 }
-span{
-    margin-left: 15px;
-    height: 20px;
-    line-height: 20px;
-    width: 20px;
-    
+.bar:hover {
+  background-color: #303134;
 }
-.lupe{
-    margin-right: 9px;
+span {
+  margin-left: 15px;
+  height: 20px;
+  line-height: 20px;
+  width: 20px;
+}
+.lupe {
+  margin-right: 9px;
 }
 svg {
-    color: #9aa0a6;
-    fill: currentColor;
-    display: block;
-    height: 100%;
-
+  color: #9aa0a6;
+  fill: currentColor;
+  display: block;
+  height: 100%;
 }
-.cam{
-    margin-right: 13px;
+.cam {
+  margin-right: 13px;
 }
-.search-input{
-    height: 34px;
-    font-size: 16px;
-    flex: 100%;
-    background-color: transparent;
-    border: none;
-    margin-top: -40px;
-    padding: 0;
-    margin: 0;
-    outline: none;
-    color: #e8eaed;
-    display: flex;
-
+.search-input {
+  height: 34px;
+  font-size: 16px;
+  flex: 100%;
+  background-color: transparent;
+  border: none;
+  margin-top: -40px;
+  padding: 0;
+  margin: 0;
+  outline: none;
+  color: #e8eaed;
+  display: flex;
 }
-.kasten-container{
-    margin-top: 7px;
-    justify-content: space-between;
-    display: flex;
-    width: 272px;
+.kasten-container {
+  margin-top: 7px;
+  justify-content: space-between;
+  display: flex;
+  width: 272px;
 }
-.kasten{
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    height: 40px;
-    color: #e8eaed;
-    flex: 1;
-    border-radius: 4px;
-    background-color: #303134;
-    margin: 20px 7px;
-    border: 1px solid #303134;
+.kasten {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  height: 40px;
+  color: #e8eaed;
+  flex: 1;
+  border-radius: 4px;
+  background-color: #303134;
+  margin: 20px 7px;
+  border: 1px solid #303134;
 }
 
-footer{
-    margin-top: auto;
+footer {
+  margin-top: auto;
 }
 
-.fotdiv{
-    
-    
-    width: 100%;
-    background: #171717;
+.fotdiv {
+  width: 100%;
+  background: #171717;
+  display: flex;
+  flex-direction: column;
+  color: #bdc1c6;
+}
+.land {
+  padding-left: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background: #171717;
+  width: 100%;
+
+  border-bottom: 3px solid #202124;
+}
+.rechtliches {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.rechtliches-abteil {
+  display: flex;
+  justify-content: center;
+}
+.fo-text {
+  padding: 10px;
+  padding-right: 20px;
+}
+
+@media screen and (min-width: 1320px) {
+  .fotdiv {
     display: flex;
     flex-direction: column;
     color: #bdc1c6;
-}
-.land{
-    padding-left: 20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    background: #171717;
-    width: 100%;
-    
-    border-bottom: 3px solid #202124;;
-}
-.rechtliches{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-
-}
-.rechtliches-abteil{
-    display: flex;
-    justify-content: center;
-}
-.fo-text{
-    padding: 10px;
-    padding-right: 20px;
-}
-
-@media screen and (min-width: 1320px)  {
-    .fotdiv{    
-        
-      
-        display: flex;
-        flex-direction: column;
-        color: #bdc1c6;
-    }
-    .rechtliches{
-        display: block;
-        justify-content: flex-end;
-        flex-direction: row;
-    
-    }
-    .co2{
-
-    }
-
+  }
+  .rechtliches {
+    display: block;
+    justify-content: flex-end;
+    flex-direction: row;
+  }
+  .co2 {
+  }
 }
