--- a/huddle-landing-page-with-alternating-feature-blocks-master/huddlecss.css
+++ b/huddle-landing-page-with-alternating-feature-blocks-master/huddlecss.css
@@ -218,9 +218,13 @@ footer {
     width: 900px;
   }
   .texte {
+    margin-left: 260px;
     font-size: 40px;
     max-width: 40ch;
     padding: 25px;
+  }
+  .texte-bilder2 .texte {
+    margin-right: 260px;
   }
   h2 {
     font-size: 54px;
