--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
   color: white;
   text-transform: uppercase;
   font-size: 1.8rem;
+  font-family: 'Lora', serif;
 }
 .body {
   display: flex;
@@ -42,9 +43,10 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin: 20px;
 }
 .seiten {
-  font-size: 1.6rem;
+  font-size: 1.9rem;
 }
 a {
   text-decoration: none;
@@ -69,5 +71,13 @@ img {
   }
   .seiten {
     font-size: 40px;
+  }
+}
+@media only screen and (max-width: 999px) {
+  .h1 {
+    font-size: 17px;
+  }
+  .seiten {
+    font-size: 15px;
   }
 }
