--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   justify-content: center;
   color: white;
   width: 70%;
-  max-width: 1500px;
+  max-width: 2000px;
   flex-direction: column;
   margin-top: 101px;
 }
@@ -30,7 +30,7 @@ body {
   color: white;
   text-transform: uppercase;
   font-size: 1.8rem;
-  font-family: 'Lora', serif;
+  font-family: "Lora", serif;
 }
 .body {
   display: flex;
@@ -87,6 +87,7 @@ img {
   width: 100%;
 }
 footer {
+  margin-top: 60px;
   width: 100%;
   align-items: center;
   justify-content: center;
