--- a/news-homepage-main/style.css
+++ b/news-homepage-main/style.css
@@ -47,7 +47,9 @@ body.overlay-active {
 }
 .head-text {
   padding-left: 14px;
+  cursor: pointer;
 }
+
 .icon {
   justify-self: flex-start;
 }
@@ -94,6 +96,9 @@ h1 {
   color: white;
   font-size: 1.1rem;
 }
+.button:hover {
+  background-color: hsl(5, 74%, 47%);
+}
 
 .main-right-content {
   display: flex;
@@ -136,6 +141,9 @@ h4 {
 }
 .menu-container {
   display: none;
+}
+.open-menu {
+  cursor: pointer;
 }
 @media only screen and (max-width: 1500px) {
   .wrapper {
