--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -15,6 +15,10 @@ body {
   --Black: hsl(0, 0%, 0%);
   overflow-x: hidden;
 }
+body.overlay-active {
+  display: block;
+  overflow: hidden;
+}
 .wrapper {
   flex-direction: column;
   width: 100%;
@@ -29,7 +33,7 @@ body {
 .nav {
   display: flex;
 }
-.nav img {
+.logo {
   width: 140px;
   height: 40px;
   margin-right: 35px;
@@ -78,7 +82,7 @@ body {
 }
 .product-preview img {
   border-radius: 20px;
-  width: 100px;
+  width: 90px;
   cursor: pointer;
 }
 .product-preview img:hover {
@@ -106,6 +110,12 @@ body {
 .prizenew {
   font-weight: 700;
   font-size: 26px;
+}
+.product-img {
+  background: url("images/image-product-1.jpg") no-repeat no-repeat;
+  height: 400px;
+  width: 400px;
+  background-size: 400px;
 }
 .discount {
   margin-left: 14px;
@@ -166,8 +176,9 @@ body {
   background: var(--White);
 }
 #cart-preview {
-  width: 40px;
-  border-radius: 4px;
+  margin-left: 7px;
+  width: 50px;
+  border-radius: 8px;
 }
 .cart-text {
   font-weight: 700;
@@ -198,17 +209,213 @@ body {
   border-radius: 30px;
   background-color: var(--Orange);
   padding: 5px;
-  margin-top: 20px;
+  margin-top: 5px;
+  color: white;
   margin-left: 30px;
   margin-right: 30px;
   cursor: pointer;
+}
+.cart-bottom:hover {
+  background-color: hsl(26, 68%, 45%);
 }
 .cart-text-container-bottom {
   display: flex;
   margin: auto;
 }
+#nav-overlay {
+  display: none;
+}
 #remove {
   width: 30px;
   margin-right: 10px;
   cursor: pointer;
+}
+.menu-icon {
+  display: none;
+}
+
+#previous {
+  display: none;
+}
+#next {
+  display: none;
+}
+
+@media only screen and (max-width: 999px) {
+  .nav-text {
+    display: none;
+  }
+  .nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .product-content {
+    flex-direction: column;
+    width: 400px;
+    justify-content: center;
+    align-items: center;
+  }
+  .product-img img {
+    border-radius: 20px;
+    width: 370px;
+  }
+  #product-img {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 370px;
+    width: 370px;
+    background: url("images/image-product-1.jpg") no-repeat no-repeat;
+    background-size: 370px;
+  }
+  #previous {
+    cursor: pointer;
+    height: 30px;
+    display: block;
+    position: relative;
+    width: 40px;
+    padding: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border-radius: 70px;
+  }
+  #previous img {
+    width: 20px;
+  }
+  #next {
+    cursor: pointer;
+    display: block;
+    height: 30px;
+    position: relative;
+    width: 40px;
+    padding: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border-radius: 70px;
+    right: 0;
+  }
+  #next img {
+    width: 20px;
+  }
+  .product-preview {
+    display: none;
+  }
+  .product-text {
+    padding-right: 25px;
+  }
+  .add-cart {
+    flex-direction: column;
+    margin-top: 30px;
+    justify-content: center;
+  }
+  .menu-icon {
+    display: block;
+  }
+  .menu-icon {
+    width: 30px;
+    height: 30px;
+    margin-right: 20px;
+  }
+
+  #less {
+    padding: 15px;
+    cursor: pointer;
+    font-size: 30px;
+  }
+  #counter {
+    padding: 15px;
+    padding-left: 130px;
+    padding-right: 130px;
+    font-size: 20px;
+  }
+  #more {
+    padding: 15px;
+    cursor: pointer;
+    font-size: 30px;
+  }
+  #add {
+    cursor: pointer;
+    display: flex;
+    color: var(--White);
+    border-radius: 15px;
+    background-color: var(--Orange);
+    padding: 15px 45px 15px 45px;
+    margin-top: 6px;
+  }
+  .overlay a {
+    font-size: 20px;
+  }
+  .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
+
+  .overlay {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.9);
+    overflow-x: hidden;
+    transition: 0.5s;
+  }
+  .header {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+  }
+
+  .overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+
+  .overlay a:hover,
+  .overlay a:focus {
+    color: #f1f1f1;
+  }
+
+  .overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+    color: white;
+  }
+
+  #cart {
+    margin-right: 40px;
+  }
+}
+
+@media screen and (max-height: 450px) {
+  .overlay a {
+    font-size: 20px;
+  }
+  .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
 }
