--- a/rock-paper-scissors-master/style.css
+++ b/rock-paper-scissors-master/style.css
@@ -179,6 +179,8 @@ body {
   padding: 10px;
   margin-top: 30px;
   text-align: center;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 #again:hover {
   outline: 2px rgb(255, 0, 0) solid;
@@ -272,7 +274,7 @@ body {
   width: 0;
   background-color: rgba(0, 0, 0, 0.336);
   overflow-x: hidden;
-  height: 100vmax;
+  height: 200vmax;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -311,4 +313,206 @@ body {
   width: 30px;
   margin-top: 14px;
   margin-right: 10px;
+}
+
+@media only screen and (max-width: 668px) {
+  .header {
+    width: fit-content;
+    outline: 3px var(--Header-Outline) solid;
+    border-radius: 10px;
+    margin-top: 30px;
+  }
+  .head-text {
+    margin-left: 30px;
+  }
+
+  .score {
+    justify-self: flex-end;
+    align-self: flex-end;
+    border-radius: 10px;
+    margin: 20px;
+    height: 120px;
+    width: 120px;
+  }
+  .score h2 {
+    font-weight: 300;
+    margin-top: 6px;
+  }
+  #score {
+    font-size: 30px;
+  }
+
+  #symbolSelect {
+    width: 300px;
+    height: 300px;
+    min-width: 200px;
+    background-size: 200px;
+    margin-top: 100px;
+  }
+  .symbolTop {
+    display: flex;
+    justify-content: space-between;
+  }
+  #paper {
+    height: 90px;
+    width: 90px;
+    border-radius: 50%;
+    background-size: 50px;
+    outline: 10px var(--Paper-Gradient) solid;
+  }
+  #rock {
+    height: 90px;
+    width: 90px;
+    border-radius: 50%;
+    background-size: 50px;
+    outline: 10px var(--Rock-Gradient) solid;
+  }
+  #scissor {
+    height: 90px;
+    width: 90px;
+    border-radius: 50%;
+    background-size: 50px;
+    outline: 10px var(--Scissors-Gradient) solid;
+  }
+  #rulesOverlay {
+    position: fixed;
+    z-index: 1;
+    width: 0;
+    background-color: rgba(0, 0, 0, 0.336);
+    overflow-x: hidden;
+    height: 200vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .overlayBox {
+    width: 30%;
+    height: 400px;
+    min-width: 300px;
+    border-radius: 20px;
+  }
+  .rulesTop {
+    display: flex;
+  }
+  .rulesText {
+    margin-left: 14px;
+    margin-top: 3px;
+    font-size: 45px;
+  }
+  .rulesImg {
+    margin-top: 50px;
+  }
+  .rulesImg img {
+    height: 240px;
+  }
+  #close {
+    margin-left: auto;
+  }
+  #close img {
+    width: 30px;
+    margin-top: 14px;
+    margin-right: 10px;
+  }
+  #symbolSelected {
+    margin-top: 30px;
+    display: flex;
+    width: 400px;
+    display: none;
+  }
+  .left {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    font-size: 25px;
+    display: flex;
+    align-items: center;
+  }
+  #middle {
+    display: flex;
+    flex-direction: column;
+    display: none;
+  }
+  #resultText {
+    color: white;
+    text-align: center;
+    font-size: 20px;
+  }
+  #again {
+    cursor: pointer;
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 30px;
+    text-align: center;
+  }
+  #again:hover {
+    outline: 2px rgb(255, 0, 0) solid;
+  }
+  .right {
+    align-items: center;
+
+    display: flex;
+    flex-direction: column;
+    color: white;
+    font-size: 25px;
+    display: flex;
+    justify-content: space-around;
+  }
+  #userSelect {
+    margin-top: 20px;
+    background-color: white;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    background-size: 50px;
+    background-repeat: no-repeat;
+    background-position: center;
+    outline: 10px var(--Scissors-Gradient) solid;
+  }
+  #userSelect::before {
+    content: "";
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    z-index: -1;
+    border-radius: 50%;
+    outline: var(--outline1widthP) rgba(255, 255, 255, 0.151) solid;
+  }
+  #userSelect::after {
+    content: "";
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    z-index: -2;
+    border-radius: 50%;
+    outline: var(--outline2widthP) rgba(255, 255, 255, 0.151) solid;
+  }
+  #botSelect {
+    margin-top: 20px;
+    background-color: rgba(0, 0, 0, 0.226);
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    background-size: 50px;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  #botSelect::before {
+    content: "";
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    z-index: -1;
+    border-radius: 50%;
+    outline: var(--outline1widthB) rgba(255, 255, 255, 0.151) solid;
+  }
+  #botSelect::after {
+    content: "";
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    z-index: -2;
+    border-radius: 50%;
+    outline: var(--outline2widthB) rgba(255, 255, 255, 0.151) solid;
+  }
 }
