--- a/angular-test/firstTest/src/app/pages/detail/detail.component.html
+++ b/angular-test/firstTest/src/app/pages/detail/detail.component.html
@@ -10,7 +10,7 @@
     <div class="infos">
       <p>
         <strong>Native Name:</strong>
-        {{ country.nativeName }}
+        {{ displayName(country.name) }}
       </p>
       <p>
         <strong>Population:</strong>
