--- a/angular-test/firstTest/src/app/pages/nav-bar/nav-bar.component.html
+++ b/angular-test/firstTest/src/app/pages/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <nav>
   <h2>Where in the world?</h2>
   <div>
-    <span>Dark mode</span>
+    <span (click)="setDark()"><p>Dark mode</p></span>
   </div>
 </nav>
