--- a/angular-test/firstTest/src/app/pages/detail/detail.component.css
+++ b/angular-test/firstTest/src/app/pages/detail/detail.component.css
@@ -1,9 +1,19 @@
+.cardCon {
+  width: 80dvw;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
 .card {
+  margin-top: 5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
 }
 .button {
+  margin-top: 50px;
+  margin-left: 50px;
   width: 200px;
   height: 50px;
   background: none;
@@ -11,10 +21,25 @@
   text-align: start;
   color: white;
 }
+span {
+  display: flex;
+}
+h3 {
+  font-size: 38px;
+  margin-bottom: 50px;
+}
 img {
-  width: 600px;
+  border-radius: 10px;
+  width: 700px;
+  aspect-ratio: 41/25;
 }
 .infos {
   color: white;
   font-size: 20px;
+  display: flex;
+}
+.info2 {
+  margin-left: 30px;
+  margin-top: 20px;
+  align-self: center;
 }
