--- a/angular-test/firstTest/src/app/pages/detail/detail.component.html
+++ b/angular-test/firstTest/src/app/pages/detail/detail.component.html
@@ -1,46 +1,43 @@
 <button class="button shadow" [routerLink]="'/'">
-  <span class="fa fa-arrow-left"></span>
-  Back
+  <span class="fa fa-arrow-left"><p>back</p></span>
 </button>
 <div *ngIf="country$ | async; let country" class="card">
-  <h3>{{ country.name[0] }}</h3>
-
-  <div>
+  <div class="cardCon">
     <img [src]="getFlag(country.flags)" />
     <div class="infos">
-      <p>
-        <strong>Native Name:</strong>
-        {{ displayName(country.name) }}
-      </p>
-      <p>
-        <strong>Population:</strong>
-        {{ country.population | number : "1.0" }}
-      </p>
-      <p>
-        <strong>Region:</strong>
-        {{ country.region }}
-      </p>
-      <p>
-        <strong>Sub Region:</strong>
-        {{ country.subregion }}
-      </p>
-      <p>
-        <strong>Capital:</strong>
-        {{ country.capital }}
-      </p>
-
-      <p>
-        <strong>Top Level Domain:</strong>
-        {{ country.topLevelDomain }}
-      </p>
-      <p>
-        <strong>Currencies:</strong>
-        {{ displayCurrencies(country.currencies) }}
-      </p>
-      <p>
-        <strong>Languages:</strong>
-        {{ displayLanguages(country.languages) }}
-      </p>
+      <div class="info1">
+        <h3>{{ displayName(country.name) }}</h3>
+        <p>
+          <strong>Native Name:</strong>
+          {{ displayName(country.name) }}
+        </p>
+        <p>
+          <strong>Population:</strong>
+          {{ country.population | number : "1.0" }}
+        </p>
+        <p>
+          <strong>Region:</strong>
+          {{ country.region }}
+        </p>
+        <p>
+          <strong>Sub Region:</strong>
+          {{ country.subregion }}
+        </p>
+        <p>
+          <strong>Capital:</strong>
+          {{ country.capital }}
+        </p>
+      </div>
+      <div class="info2">
+        <p>
+          <strong>Currencies:</strong>
+          {{ displayCurrencies(country.currencies) }}
+        </p>
+        <p>
+          <strong>Languages:</strong>
+          {{ displayLanguages(country.languages) }}
+        </p>
+      </div>
     </div>
   </div>
 </div>
