--- a/angular-test/firstTest/src/styles.css
+++ b/angular-test/firstTest/src/styles.css
@@ -6,7 +6,7 @@
   --Very-Dark-Blue2: hsl(201, 16%, 17%);
 
   --Dark-Gray: hsl(0, 0%, 52%);
-  --Very-Light-Gray: hsl(0, 0%, 98%);
+  --Very-Light-Gray: hsl(0, 0%, 87%);
   --White: hsl(0, 0%, 100%);
   font-family: "Nunito Sans", sans-serif;
 }
@@ -16,6 +16,12 @@
   padding: 0;
 }
 body {
-  background-color: var(--Very-Dark-Blue);
+  background-color: var(--Very-Dark-Blue2);
   overflow-x: hidden;
+}
+h2 {
+  color: white;
+}
+p {
+  color: white;
 }
